@@ -636,6 +636,7 @@ if __name__=='pymol.setting':
         scene_buttons_mode                 = 598
         scene_buttons                      = 599
         map_auto_expand_sym                = 600
+        image_copy_always                  = 601
         
     setting_sc = Shortcut(SettingIndex.__dict__.keys())
     
