@@ -2,6 +2,10 @@
 CHANGE LOG
 =========================================================================
 
+2008-09-07 Warren L. DeLano <warren@delsci.com>
+
+	* improved ability to write images asynchronously as a web server
+	
 2008-09-05 Warren L. DeLano <warren@delsci.com>
 
 	* fixed a couple of bugs introduced when making changes below
